<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blank.edustation.TutorProfile">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/linearLayout"
            android:orientation="vertical">

            <ImageView
                android:layout_width="203dp"
                android:layout_height="112dp"
                android:id="@+id/imageView"
                android:contentDescription=""
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NameField"
                android:text=""
                android:inputType="none"
                android:clickable="true"
                android:editable="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MajorField"
                android:inputType="none"
                android:text=""
                android:editable="false"
                android:clickable="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:id="@+id/radioButton"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:id="@+id/radioButton2"
                    android:checked="false" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AgeField"
                android:text=""
                android:inputType="none"
                android:clickable="true"
                android:editable="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmailField"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.36"
                android:inputType="none"
                android:text="@string/email"
                android:editable="false"
                android:clickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="Calendar"
                android:id="@+id/calendarButton"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Ratings"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Clarity"
                android:id="@+id/textView"
                android:layout_weight="0.36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Knowledge"
                android:id="@+id/textView2"
                android:layout_weight="0.36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Helpfullness"
                android:id="@+id/textView3"
                android:layout_weight="0.36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Tutoring"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.36"
                android:text="@string/cop3220"
                android:editable="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.36"
                android:text="COP 4100"
                android:editable="false" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.36" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
